Troca das versões do java, da versão 17 para 21